# check_your_university

core/: .coverage  .env  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
core/bot/: api_client.py  config.py  main.py
core/bot/keyboards/: inline_keyboards.py  reply_keyboards.py
core/notifications/: kafka.py
core/src/: factories.py  logger.py  logger_config.py  main.py
core/src/application/abstractions/dao/: base.py  i_admin_dao.py  i_building_dao.py  i_request_dao.py  i_s3_dao.py  i_user_dao.py
core/src/application/contracts/: i_admin_service.py  i_request_service.py  i_s3_service.py  i_user_service.py
core/src/application/domain/: admin.py  annotated.py  request.py  user.py
core/src/application/services/: admin_service.py  request_service.py  s3_service.py  user_service.py
core/src/infrastructure/crud/: request.py
core/src/infrastructure/database/: database.py
core/src/infrastructure/database/dao/: admin_dao.py  building_dao.py  request_dao.py  s3_dao.py  user_dao.py
core/src/infrastructure/database/migrations/: env.py
core/src/infrastructure/routes/: request.py
core/src/infrastructure/schemas/: request.py
core/src/infrastructure/utils/: kafka_producer.py  s3_client.py  security.py  token_service.py
core/src/presentation/api/: admin.py  admin_actions.py  middleware.py  request.py  s3.py  user.py
core/tests/: test_1.py  test_admin.py  test_admin_service.py  test_api.py  test_building.py  test_request.py  test_request_service.py  test_s3.py  test_s3_service.py  test_user.py
(+17 files in other folders)
