[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"
greenlet = "^3.1.1"
aiogram = "^3.17.0"
pydantic-settings = "^2.7.1"
python-dotenv = "^1.0.1"
pyjwt = "^2.10.1"
pytest = "^8.3.4"
anyio = "^4.8.0"
pytest-asyncio = "^0.25.2"
confluent-kafka = "^2.8.0"
passlib = "^1.7.4"
boto3 = "^1.35.98"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
